correction boites flexibles et style du alignement texte form et input

--- a/style.css
+++ b/style.css
@@ -187,22 +187,6 @@ p {
 }
 
 
-/* Texte page d'accueil */
-.contenuPageAccueil h1 {
-	margin-top: 30px;
-    margin-bottom: 20px;
-	color: #3687c6;
-}
-
-.contenuPageAccueil h2 {
-	margin-top: 15px;
-	color: #7b7979;
-}
-
-.contenuPageAccueil p {
-	color: #888888;
-}
-
 /* Image page d'accueil */
 #imagequiz {
 	position: relative;
@@ -268,7 +252,7 @@ width: 15%;
 }
 
 
-/* Bouton test rapide */ 
+/* Boutons du Tableau de bord */ 
 
 #test .bouton {
   border-radius: 5;
@@ -284,7 +268,25 @@ width: 15%;
   text-decoration: none;
   position: relative;
   top: 30px;
-  margin-left: 5px;
+  margin-left: 25px;
+ }
+
+
+#examen .bouton {
+  border-radius: 5;
+  border-radius: 5;
+  border-radius: 5px;
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 14px;
+  background: #f96e5b;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  position: relative;
+  top: 150px;
+  margin-left: 25px;
  }
 
 
@@ -313,7 +315,7 @@ width: 15%;
 }
 
 
-/* Test rapide Encadrement */
+/* Test rapide Encadrement
 #test {
 background-color: #DDDDDD;
 padding-top: 5px;
@@ -323,9 +325,27 @@ font-size: 12pt;
 color: #888888;
 text-align: left;
 }
+*/
+
+/* Contenu Accueil*/
+
+.contenuPageAccueil h1 {
+	margin-top: 30px;
+    margin-bottom: 20px;
+	color: #3687c6;
+}
+
+.contenuPageAccueil h2 {
+	margin-top: 15px;
+	color: #7b7979;
+}
+
+.contenuPageAccueil p {
+	color: #888888;
+}
 
 
-/* Contenus des pages*/
+/*Contenu Instruction*/
 .contenuPageInstructions{
   display: block;
   float: left;
@@ -337,11 +357,47 @@ text-align: left;
   }
 }
 
+
+/*Contenu Tableau de bord*/
 .contenuPageTDB {
   display: block;
   float: left;
   padding-right: 40%;
 }
+
+.contenuPageTDB h1 {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  margin-left: 25px;
+  color: #3687c6;
+}
+
+#test h2{
+  margin-top: 30px;
+  margin-left: 25px;
+  color: #7b7979;
+}
+
+#examen h2{
+  margin-top: 80px;
+  margin-bottom: 10px;
+  margin-left: 25px;
+  color: #7b7979;
+}
+
+.contenuPageTDB p {
+  margin-left: 25px;
+  color: #888888;
+}
+
+label {
+	color: #888888;
+}
+
+form {
+	margin-left: 25px;
+}
+
 
 aside {
   display: block;
@@ -350,7 +406,7 @@ aside {
   position: fixed;
   right: 0%;
   border-radius: 10px 0 0 10px;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 10px;
   color: #ffffff;
   width: 30%;
